<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_transparent"
        android:padding="10dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_weather_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_cloud" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date"
            style="@style/WeatherItemHeader"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/iv_weather_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_weather_icon"
            tools:text="24.07.2023" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_temperature"
            style="@style/WeatherItemTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/temperature_range"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            tools:text="20° С / 40° С" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description"
            style="@style/WeatherItemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="@+id/tv_temperature"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
            tools:text="Облачно" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/fl_weather_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:flexWrap="wrap"
                app:justifyContent="space_around">
                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/WeatherItemBlock">
                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/WeatherItemBlockImage"
                        android:src="@drawable/ic_cloud"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_overcast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overcast"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/WeatherItemParameter"
                        tools:text="20%"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_overcast_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overcast_name"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/WeatherItemBlockName" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/WeatherItemBlock"
                    android:layout_marginStart="10dp">
                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/WeatherItemBlockImage"
                        android:src="@drawable/ic_water"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_relative_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overcast"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/WeatherItemParameter"
                        tools:text="20%"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_relative_humidity_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/relative_humidity_name"
                        android:maxWidth="100dp"
                        android:textAlignment="center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/WeatherItemBlockName" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/WeatherItemBlock"
                    android:layout_marginStart="10dp">
                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/WeatherItemBlockImage"
                        android:src="@drawable/ic_pressure"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overcast"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/WeatherItemParameter"
                        tools:text="20 мм рт. ст."/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_pressure_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure_name"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/WeatherItemBlockName" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/WeatherItemBlock"
                    android:layout_marginStart="10dp">
                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/WeatherItemBlockImage"
                        android:src="@drawable/ic_wind"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/WeatherItemParameter"
                        tools:text="20 м/с"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_wind_speed_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed_name"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/WeatherItemBlockName" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WeatherItemHeader"
            tools:text="24.07.2023"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/WeatherBlock">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_temperature_header"
                style="@style/WeatherItemBlockHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/temperature_header"
                app:layout_constraintEnd_toStartOf="@+id/appCompatImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_min_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/min_temperature"
                app:layout_constraintTop_toBottomOf="@id/tv_temperature_header"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/WeatherItemText"
                tools:text="Мин: 20° С"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_max_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_min_temperature"
                app:layout_constraintStart_toEndOf="@id/tv_min_temperature"
                android:layout_marginStart="20dp"
                android:text="@string/max_temperature"
                style="@style/WeatherItemText"
                tools:text="Макс: 20° С"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_temperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/WeatherBlock">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_overcast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overcast"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/WeatherItemBlockHeader"
                tools:text="Облачность: 20%"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_cloud"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/WeatherBlock">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_relative_humidity"
                style="@style/WeatherItemBlockHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/relative_humidity"
                app:layout_constraintEnd_toStartOf="@+id/appCompatImageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Относительная влажность: 20%" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_water"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/WeatherBlock">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pressure"
                style="@style/WeatherItemBlockHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/pressure"
                app:layout_constraintEnd_toStartOf="@+id/appCompatImageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Давление: 770 мм рт. ст." />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_pressure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/WeatherBlock">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_speed"
                style="@style/WeatherItemBlockHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/wind_speed"
                app:layout_constraintEnd_toStartOf="@+id/appCompatImageView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Скорость ветра: 20 м/c" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_wind"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    -->
</com.google.android.material.card.MaterialCardView>